# pyx_rasterizer

./: .gitignore  ?  README.md  playground.pyxapp  pyproject.toml
assets/porygon/: materials.mtl  materials.mtl.bak
src/: 3D.py  auto_py.sh  example_values.hex  gif_exporter.py  main.py  obj_parser.py  palette.py  point.py  sin.py  utils.py
