[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["John Christensen <johnedchristensen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyxel = "^1.9.18"
mypy = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
