[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["John Christensen <johnedchristensen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mypy = "^1.6.1"
pillow = "^10.1.0"
types-pillow = "^10.1.0.0"
numpy = "^1.26.2"
pyxel = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
